css/board.css
/*

1024
1280×720
1366×768
1440×900
1536×864
1600×900
1920×1080


@media (min-width: 1600px) {
header a {
    font-size: 60px!important;
}

*/

/******************************
       TABLÓN DE ANUNCIOS
*******************************/
.th-1 { /*Caja principal*/
    background: var(--dark3);
    width: 100%;
    height: 320px;
    margin: 0 auto;
    margin-top: 10vh;
    box-sizing: border-box;
    border:1px solid var(--dark2);
    padding:20px;
    display:flex;
    flex-direction: column;
    gap:20px;
}

.main-board { /*Contenedor de las cajas importantes*/
    height:196px;
    display: flex;
    gap:20px;
}

.main-left { /*Contenedor de la información a la izquierda*/
    width:30%;
    display: flex;
    flex-direction: column;
    gap:20px;
}

.main-fechas { /*Contenedor de la cronología y link al último anuncio*/
    height:88px;
    display: flex;
    flex-direction: column;
}

.th-crono { /*Módulo de cronología*/
    height:44px;
    background: var(--dark4);
    display: flex;
    justify-content: space-between;
    align-items: center;
    box-sizing: border-box;
    padding: 12px;
}

.th-crono i { /*Ícono de la cronología*/
    color:var(--accent);
}

.th-crono span { /*Texto de la cronología*/
    font-size: 11px;
    text-transform: uppercase;
}

.th-anuncio { /*Módulo de anuncio*/
    height:44px;
    background: var(--dark5);
    display: flex;
    justify-content: space-between;
    align-items: center;
    box-sizing: border-box;
    padding: 12px;
}

.th-anuncio span { /*Texto de la cronología*/
    font-size: 11px;
    text-transform: uppercase;
}

.th-anuncio a { /*Ícono de la cronología*/
    background: var(--accent);
    font-size: 11px;
    width: 30px;
    height: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 100%;
}

.th-anuncio a:hover { /*Hover del Ícono de la cronología*/
    color:var(--light)!important;
}

.th-staff { /*Módulo de staff*/
    height:88px;
}

.staff-img {
    display: flex;
    height: inherit;
    gap: 20px;
}

.staff-img a {
    width: 100%;
height: inherit;
border: 1px solid var(--dark2);
box-sizing: border-box;
}

.staff-img a img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.th-links { /*Módulo de links rápidos*/
    width: 20%;
    background: var(--dark4);
    box-sizing: border-box;
    padding: 12px;
    display: flex;
    flex-direction: column;
    text-transform: uppercase;
    font-size: 13px;
    line-height: 1.3;
}

.th-links a  { /*Cada link en el módulo*/
    color:var(--accent);
    font-family: var(--serif);
    display: flex;
    align-items: end;
    gap: 20px;
}

.th-links a em { /*Los números en cada link*/
    width:20px;
    font-style: normal;
}

.th-links a span { /*El texto en cada link*/
    font-family:var(--body);
    color:var(--light);
    font-size: 9px;
    display: flex;
    align-items: center;
}

.th-links a span:before  { /*La rayita que aparece en hover*/
    content:"";
    background:var(--accent);
    display: block;
    width:0px;
    height:1px;
    transition:.5s ease-in-out;
    position: relative;
}

.th-links a:hover span:before  { /*El hover de cada link*/
    content:"";
    margin-right:20px;
    background:var(--accent);
    display: block;
    width:30px;
    height:1px;
    transition:.5s ease-in-out;
    position: relative;
}

.th-rt { /*Módulo de últimos temas*/
    width:46%;
    background:var(--dark4);
    box-sizing: border-box;
    padding: 10px;
    position: relative;
    z-index: 1;
}

.th-rt:before { /*Patrón rarito!*/
    content: "";

    /*Posición y tamaño*/
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;

    /*Patrón rarito! x2*/
    background: var(--pattern);
    opacity: 0.2;
}

.rt-pad { /*Padding y scroll del módulo de últimos temas!*/
    box-sizing: border-box;
    padding: 10px;
    overflow-y: scroll;
    font-size: 9px;
    text-transform: uppercase;
    height:100%;
}

.ult-tema { /*Cada tema*/
    height:40px;
}

.rt-pad span {  /*Título de cada tema*/
    display:block;
}

.rt-pad span i { /*Flechita en el  título de cada tema*/
   color:var(--accent);
}

.rt-pad span a {  /*Título de cada tema x2*/
    font-size: 13px;
    font-weight: bold;
}

.th-eventos { /*Módulo de eventos*/
    height:65px;
    background:var(--dark4);
    display: flex;
    box-sizing: border-box;
    padding: 10px;
    gap:20px;
}

.th-event { /*Título del módulo de eventos*/
    text-transform: uppercase;
    font-family: var(--title);
    text-shadow: 1px 2px 0px var(--accent);
    font-size: 23px;
    width: 105px;
    letter-spacing: 2px;
    line-height: 1;
    display: flex;
    justify-content: center;
    align-items: center;
}

.event-flex { /*Contenedor de eventos*/
    box-sizing: border-box;
    border-left: 1px solid var(--dark2);
    padding-left: 20px;
    display: flex;
    width: calc(100% - 108px);
    align-items: center;
    font-size: 10px;
    gap: 20px;
}

.event-flex span {
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content: center;
    max-width: 23%;
    flex: 1 0 25%;
}

.event-flex span  a { /*Título de cada evento*/
    font-family: var(--serif);
    text-transform: uppercase;
    color: var(--accent);
    font-weight: 900;
    font-size: 14px;
    display: block;
    width: 100%;
    max-height: 20px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

@media (max-width:666px) {
    .th-1 {
        height: auto!important;
    gap: 0;
}
    .main-board {
        flex-wrap: wrap!important;
    }

    .main-left {
        align-self: stretch!important;
        flex: 100%!important;
    }

    .th-links {
        flex: 100%!important;
    }

    .th-rt  {
        flex: 100%!important;
        height: 184px!important;
    }

    .th-eventos {
        margin-top: 435px!important;
        padding: 0!important;
    }

    .th-event {
        display: none!important;
    }

    .event-flex {
        border-left: 0!important;
        padding-left: 0!important;
        text-align: center!important;
    }
}

